@@ -5,3 +5,5 @@ table when the pages the links point to change (are added, removed, etc).
 There seem only two solutions to that bug -- either really make wikilinks
 in an external table file not work (probably by escaping them), 
 or run the preprocess code also in scan (expensive!). --[[Joey]]
+
+[[done]]
