@@ -1,6 +1,7 @@
 ikiwiki (3.02) UNRELEASED; urgency=low
 
   * table: Fix misparsed links in external files.
+  * table: Find links in external files in scan pass.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 06 Jan 2009 15:02:52 -0500
 
